# sea-events-data-engineering

./: .gitignore  README.md  config.py  main.py  pyproject.toml
.github/workflows/: tests.yml
src/: connectors.py  entities.py  flows.py
src/flows/: __init__.py  combine_enim_accidents_with_ship.py  enhance_seamis_reports.py
src/repositories/: __init__.py  repository_setup.py
src/repositories/enim_accidents/: __init__.py  abc.py  fake_data.json
src/repositories/enim_accidents/fake/: client.py  database.py
src/repositories/enim_accidents_with_ships_data/: __init__.py  abc.py
src/repositories/enim_accidents_with_ships_data/fake/: client.py  database.py
src/repositories/enim_accidents_with_ships_data/sqlite/: client.py  database.py
src/repositories/seamis_reports/: __init__.py  abc.py
src/repositories/seamis_reports/fake/: client.py  database.py
src/repositories/seamis_reports_with_ships_data/: __init__.py  abc.py
src/repositories/ships/: __init__.py  abc.py  fake_data.json
src/repositories/ships/dam_oracle/: client.py  (+1 more)
src/tasks/: __init__.py  task_combine_enim_accidents_with_ships.py  task_extract_enim_accidents.py  task_extract_seamis_reports.py  task_extract_ships_data.py  task_load_enhanced_seamis_reports.py  task_load_enim_accidents_with_ship.py  tasks_enhance_with_ships.py
tests/example/: job_examples.py  task_examples.py  test_job_example.py  test_task_example.py
tests/flows/: conftest.py  test_combine_enimAccidents_with_ship_data.py  test_enhance_seamis_reports.py
tests/tasks/: conftest.py  test_combine_accident_with_ship.py
(+9 files in other folders)
