[tool.poetry]
name = "sea-events-data-engineering"
version = "0.1.0"
description = ""
authors = ["Philippe GALVAN <git.philippeG@outlook.com>"]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^1.2.0"
pydantic = "^1.9.0"
cx-Oracle = "^8.3.0"
SQLAlchemy = "^1.4.35"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"
mypy = "^0.942"
black = "^22.3.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
